--- a/bbc-feed-reader/NewsList.storyboard
+++ b/bbc-feed-reader/NewsList.storyboard
@@ -8,6 +8,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -130,6 +131,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xg6-7N-ruA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="72.799999999999997" y="-340.47976011994007"/>
+        </scene>
+        <!--News View Controller-->
+        <scene sceneID="rbw-ET-AGa">
+            <objects>
+                <viewController storyboardIdentifier="BBCNewsViewController" automaticallyAdjustsScrollViewInsets="NO" id="zdn-Uf-uRA" customClass="BBCNewsViewController" customModule="bbc_feed_reader" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bDR-wP-2CX"/>
+                        <viewControllerLayoutGuide type="bottom" id="hQV-Vc-yTv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ozb-Jz-6tm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="geC-ad-2rr" userLabel="Categories Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="2VB-sN-obQ"/>
+                                </constraints>
+                            </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1gZ-ob-02W" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="64" width="375" height="1"/>
+                                <color key="backgroundColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="dAh-vG-dQy"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HIc-c3-oep" userLabel="NewsPosts Container">
+                                <rect key="frame" x="0.0" y="65" width="375" height="602"/>
+                                <connections>
+                                    <segue destination="AdC-a3-qnG" kind="embed" identifier="NewsPostsListViewController" id="c0M-Sb-CaK"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xdD-Hb-wgP" userLabel="Status Container">
+                                <rect key="frame" x="94" y="266" width="188" height="200"/>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1gZ-ob-02W" firstAttribute="leading" secondItem="Ozb-Jz-6tm" secondAttribute="leading" id="8MZ-Yy-IYW"/>
+                            <constraint firstAttribute="trailing" secondItem="geC-ad-2rr" secondAttribute="trailing" id="IJJ-Sa-qx1"/>
+                            <constraint firstItem="geC-ad-2rr" firstAttribute="top" secondItem="bDR-wP-2CX" secondAttribute="bottom" id="Jvf-ox-lkN"/>
+                            <constraint firstItem="xdD-Hb-wgP" firstAttribute="width" secondItem="Ozb-Jz-6tm" secondAttribute="width" multiplier="0.5" id="NId-1R-gFH"/>
+                            <constraint firstAttribute="trailing" secondItem="HIc-c3-oep" secondAttribute="trailing" id="Q2m-Po-0Ue"/>
+                            <constraint firstItem="xdD-Hb-wgP" firstAttribute="centerX" secondItem="HIc-c3-oep" secondAttribute="centerX" id="Qtk-Ll-36W"/>
+                            <constraint firstItem="HIc-c3-oep" firstAttribute="top" secondItem="1gZ-ob-02W" secondAttribute="bottom" id="V7j-mZ-DLf"/>
+                            <constraint firstAttribute="trailing" secondItem="1gZ-ob-02W" secondAttribute="trailing" id="XpG-dH-KjH"/>
+                            <constraint firstItem="1gZ-ob-02W" firstAttribute="top" secondItem="geC-ad-2rr" secondAttribute="bottom" id="duc-Co-baC"/>
+                            <constraint firstItem="HIc-c3-oep" firstAttribute="leading" secondItem="Ozb-Jz-6tm" secondAttribute="leading" id="eEE-79-Mbh"/>
+                            <constraint firstItem="hQV-Vc-yTv" firstAttribute="top" secondItem="HIc-c3-oep" secondAttribute="bottom" id="fg3-J2-KWr"/>
+                            <constraint firstItem="geC-ad-2rr" firstAttribute="leading" secondItem="Ozb-Jz-6tm" secondAttribute="leading" id="fjc-Dz-NmE"/>
+                            <constraint firstItem="xdD-Hb-wgP" firstAttribute="height" secondItem="Ozb-Jz-6tm" secondAttribute="height" multiplier="0.3" id="qQX-2M-ibE"/>
+                            <constraint firstItem="xdD-Hb-wgP" firstAttribute="centerY" secondItem="HIc-c3-oep" secondAttribute="centerY" id="s8e-k4-vZK"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JCo-Vv-9Nk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-911.20000000000005" y="-339.58020989505252"/>
         </scene>
     </scenes>
     <resources>
