--- a/bbc-feed-reader/NewsList.storyboard
+++ b/bbc-feed-reader/NewsList.storyboard
@@ -18,7 +18,7 @@
                 <viewControllerPlaceholder storyboardName="Status" referencedIdentifier="StatusViewController" id="CS0-Pq-02x" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mO5-D7-sY7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-98" y="-494"/>
+            <point key="canvasLocation" x="-726" y="-171"/>
         </scene>
         <!--NewsCategoriesViewController-->
         <scene sceneID="uak-Vo-tk9">
@@ -26,14 +26,14 @@
                 <viewControllerPlaceholder storyboardName="NewsCategories" referencedIdentifier="NewsCategoriesViewController" id="cQq-Za-P16" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oao-n3-nKX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-223" y="-670"/>
+            <point key="canvasLocation" x="-678" y="-401"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="MIK-CC-kKL">
             <objects>
                 <tableViewController storyboardIdentifier="NewsPostsListViewController" id="AdC-a3-qnG" customClass="NewsPostsListViewController" customModule="bbc_feed_reader" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="380" sectionHeaderHeight="28" sectionFooterHeight="28" id="5SQ-oy-DW2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -146,7 +146,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xg6-7N-ruA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="72.799999999999997" y="-340.47976011994007"/>
+            <point key="canvasLocation" x="-300" y="378"/>
         </scene>
         <!--News View Controller-->
         <scene sceneID="rbw-ET-AGa">
@@ -210,10 +210,56 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JCo-Vv-9Nk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-911.20000000000005" y="-339.58020989505252"/>
+            <point key="canvasLocation" x="-1410" y="-376"/>
+        </scene>
+        <!--Favorites News View Controller-->
+        <scene sceneID="RW1-VL-UNR">
+            <objects>
+                <viewController storyboardIdentifier="FavoritesNewsViewController" automaticallyAdjustsScrollViewInsets="NO" id="y3v-Ya-l8f" customClass="FavoritesNewsViewController" customModule="RSSFeedReader" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qkn-cw-dTi"/>
+                        <viewControllerLayoutGuide type="bottom" id="DT2-Td-5we"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VkW-Ge-MJL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="53U-a6-Gq6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <connections>
+                                    <segue destination="AdC-a3-qnG" kind="embed" identifier="NewsPostsListViewController" id="pLw-ub-eGu"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BX9-DB-MVC" userLabel="Status Container">
+                                <rect key="frame" x="94" y="244" width="188" height="200"/>
+                                <connections>
+                                    <segue destination="CS0-Pq-02x" kind="embed" identifier="StatusViewController" id="rbp-5a-r8P"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BX9-DB-MVC" firstAttribute="height" secondItem="VkW-Ge-MJL" secondAttribute="height" multiplier="0.3" id="6My-kC-mvo"/>
+                            <constraint firstItem="BX9-DB-MVC" firstAttribute="centerY" secondItem="53U-a6-Gq6" secondAttribute="centerY" id="7gg-RE-UOr"/>
+                            <constraint firstItem="53U-a6-Gq6" firstAttribute="leading" secondItem="VkW-Ge-MJL" secondAttribute="leading" id="9Tg-44-5RV"/>
+                            <constraint firstItem="53U-a6-Gq6" firstAttribute="top" secondItem="Qkn-cw-dTi" secondAttribute="bottom" id="N58-3x-PRT"/>
+                            <constraint firstAttribute="trailing" secondItem="53U-a6-Gq6" secondAttribute="trailing" id="bso-C1-YPI"/>
+                            <constraint firstItem="BX9-DB-MVC" firstAttribute="centerX" secondItem="53U-a6-Gq6" secondAttribute="centerX" id="opX-I7-OUX"/>
+                            <constraint firstItem="BX9-DB-MVC" firstAttribute="width" secondItem="VkW-Ge-MJL" secondAttribute="width" multiplier="0.5" id="r3M-TD-EMo"/>
+                            <constraint firstItem="DT2-Td-5we" firstAttribute="top" secondItem="53U-a6-Gq6" secondAttribute="bottom" id="u6K-uZ-ivp"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x7I-SG-Mv9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1410" y="386"/>
         </scene>
     </scenes>
     <resources>
         <image name="favorite-icon" width="128" height="128"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="pLw-ub-eGu"/>
+        <segue reference="rbp-5a-r8P"/>
+    </inferredMetricsTieBreakers>
 </document>
